--- a/src/index.html
+++ b/src/index.html
@@ -19,8 +19,42 @@
 </head>
 
 <body>
-  <!-- huehuehue -->
-  <app-root></app-root>
+  <!-- <app-root></app-root> -->
+  <header class="mdl-layout__header mdl-layout__header--transparent">
+    <div id="portfolio-body">
+      <h1>TK Tran</h1>
+      <div id="slogan">
+        <span>Software Engineer</span>
+      </div>
+      <div id="location">
+        <span>👁‍🗨 Providence</span>
+      </div>
+    </div>
+  </header>
+  <footer class="mdl-mini-footer">
+    <ul id="footer-links" class="mdl-mini-footer__link-list">
+      <li>
+        <a href="https://www.github.com/TKXYZ">
+          <i class="fa fa-github fa-2x" aria-hidden="true"></i>
+        </a>
+      </li>
+      <li>
+        <a href="https://www.linkedin.com/in/thach-kim-tran/">
+          <i class="fa fa-linkedin fa-2x" aria-hidden="true"></i>
+        </a>
+      </li>
+      <li>
+        <a href="https://www.instagram.com/tkdotdev/">
+          <i class="fa fa-instagram fa-2x" aria-hidden="true"></i>
+        </a>
+      </li>
+      <li>
+        <a href="mailto:tktrannn@live.com">
+          <i class="fa fa-envelope-o fa-2x" aria-hidden="true"></i>
+        </a>
+      </li>
+    </ul>
+  </footer>
 </body>
 
 </html>
