--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,8 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
   <!-- Font Awesome (https://fontawesome.com/icons) -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <!-- TypeIt (Vanilla JS) -->
+  <script src="assets/js/TypeIt.js" type="text/javascript"></script>
 </head>
 
 <body>
