--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
   <!-- Font Awesome (https://fontawesome.com/icons) -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-  <!-- TypeIt (Vanilla JS) -->
+  <!-- TypeIt (https://www.typeitjs.com/docs/vanilla/usage) -->
   <script src="assets/js/TypeIt.js" type="text/javascript"></script>
 </head>
 
